# terraform-playground

./: .gitignore  Makefile  README.md  docker-compose.yml
application/: pyproject.toml
application/application/: injectors.py
application/application/migrations/: 0001_initial.py
application/application/tests/: __init__.py
application/application/utils/: middleware.py
application/application/views/: login.py
application/docs/: index.html  search.js
application/docs/application/: tests.html
application/docs/application/tests/: common_method.html  conftest.html  factories.html  models.html  test_email.html  test_health_check.html  test_login.html
application/docs/application/tests/factories/: customer.html  user.html
application/project/settings/: base.py  dev.py  environment.py
application/project/urls/: base.py
containers/django/: Dockerfile.dev  Dockerfile.prd  entrypoint.dev.sh  entrypoint.prd.sh  entrypoint.sh
containers/front/: Dockerfile
containers/nginx/: Dockerfile  Dockerfile.prd  nginx.conf  nginx.prd.conf
containers/postgres/: Dockerfile  init.sql
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/features/constants/: errorMessage.ts
frontend/features/types/: ApiTypes.ts  FormTypes.ts
frontend/features/users/: useLogin.ts
frontend/features/utils/: fetch.ts  handlers.ts
frontend/pages/: index.tsx
frontend/pages/404/: index.tsx
frontend/pages/users/: index.tsx
infra/: .terraform.lock.hcl  alb.tf  bastion.tf  cloudwatch.tf  database.tf  dns.tf  ec2.tf  ecs.tf  iam.tf  load_balancer.tf  main.tf  network.tf  outputs.tf  s3.tf  ssm.tf  variables.tf
infra/ecs/: taskdef.json
infra/templates/bastion/: user-data.sh
infra/templates/ecs/: task-definition.json  task-exec-role.json  task-role.json  taskdef.json  taskdef.json.tpl
